# tech-websockets-test

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml
backend/: .env.template  alembic.ini  main.py  pyproject.toml  zrsa-ove-demo.spec
backend/app/: app.py  main.py
backend/app/api/v1/: sockets.py  state.py
backend/app/api/v1/endpoints/: example.py
backend/app/core/: __init__.py  auth.py  cache.py  config.py  cors.py  logger.py  metrics.py  rate_limiter.py  schemas.py  sockets.py  state.py  templates.py
backend/app/db/: __init__.py  models.py  session.py
backend/config/: redis.conf
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: fd3c1fdeed7d_initial_migration.py
backend/public/: asyncapi.html  docs.html
backend/schemas/: openapi.json
backend/schemas/asyncapi/: v1.json
backend/schemas/entities/: APIKey.schema.json  ArcWidthUpdatePayload.schema.json  GetStatePayload.schema.json  SelectCountyBroadcastPayload.schema.json  SelectCountyPayload.schema.json  SocketJoinPayload.schema.json  Status.schema.json  TextUpdatePayload.schema.json  TickPayload.schema.json
backend/scripts/: schemas.py
demo/: index.html
frontend/: .prettierignore  .prettierrc  eslint.config.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/cli/: utils.ts
frontend/cli/codegen/: api.ts  schemas.ts  sockets.ts
frontend/public/: manifest.json
frontend/src/: env.ts  main.tsx  styles.css
frontend/src/api/: api.ts  schemas.ts  sockets-v1.ts
frontend/src/lib/: debug.ts  (+5 more)
(+16 files in other folders)
