[project]
name = "zrsa-ove-demo"
version = "0.1.0"
description = "OVE demo for the zrsa-ove-demo project."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic==1.17.2",
    "fastapi-cache2[redis]==0.2.2",
    "fastapi[standard]==0.122.0",
    "greenlet==3.2.4",
    "numpy==2.3.5",
    "pandas==2.3.3",
    "prometheus-fastapi-instrumentator==7.1.0",
    "pydantic-settings==2.12.0",
    "pyinstaller==6.17.0",
    "python-socketio==5.15.0",
    "redis==4.6.0",
    "slowapi==0.1.9",
    "sqlalchemy==2.0.44",
]
